--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,68 @@
-version: '3'
+version: "3.8"
 
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:7.6.0
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - "2181:2181"
 
   kafka:
     image: confluentinc/cp-kafka:7.6.0
+    container_name: kafka
     ports:
       - "9092:9092"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     depends_on:
       - zookeeper
+
+  postgres:
+    image: postgres:16-alpine
+    container_name: ads_postgres
+    environment:
+      POSTGRES_DB: ads_db
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: pass
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+      - ./sql:/docker-entrypoint-initdb.d 
+
+  api:
+    container_name: ads_api
+    build:
+      context: .
+      dockerfile: Dockerfile.api
+    ports:
+      - "8080:8080"
+    environment:
+      DB_URL: postgres://user:pass@ads_postgres:5432/ads_db?sslmode=disable
+      KAFKA_BROKER: kafka:9092
+      PORT: 8080
+    depends_on:
+      - postgres
+      - kafka
+
+  consumer:
+    container_name: ads_consumer
+    build:
+      context: .
+      dockerfile: Dockerfile.consumer
+    environment:
+      DB_URL: postgres://user:pass@ads_postgres:5432/ads_db?sslmode=disable
+      KAFKA_BROKER: kafka:9092
+    depends_on:
+      - postgres
+      - kafka
+
+volumes:
+  pgdata:
